fix too few whitespace on sidebar

--- a/_sass/_navbar.scss
+++ b/_sass/_navbar.scss
@@ -75,7 +75,7 @@ body {
         }
     }
 }
-@media (max-width:1480px) {
+@media (max-width:1540px) {
     .portfolio-sidenav {
         display:none !important;
     }
